k8s/militerm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: militerm-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: game
  template:
    metadata:
      labels:
        component: game
        app: game
    spec:
      serviceAccount: militerm-mesh
      containers:
        - name: militerm
          image: militerm
          imagePullPolicy: Never
          ports:
            - containerPort: 4000
              name: web
            - containerPort: 4369
              name: epmd
            - containerPort: 6666
              name: telnet
