k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  type: ClusterIP
  ports:
    - name: psql
      port: 5432
      targetPort: 5432
  selector:
    component: database
