k8s/militerm-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: militerm-ingress-service
  labels:
    component: game
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: militerm-service
              servicePort: 4000
